# livraria-fabrica-de-software

./: README.md  pyproject.toml
config/: settings.py
livraria/: admin.py  models.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0003_autor.py  0004_livro.py
