[project]
name = "livraria"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Laíssa Mendes", email = "laissa.mendes2006@gmail.com"},
]
dependencies = [
    "django>=5.0.4",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
